update install and default value in manifest to add a / at the end of path if missing

--- a/scripts/install
+++ b/scripts/install
@@ -4,6 +4,11 @@
 domain=$1
 path=$2
 
+# Add ending / to path if missing
+if [[ ! $path =~ /$ ]]; then
+    path=$path/
+fi
+
 # Check domain/path availability
 sudo yunohost app checkurl $domain$path -a radicale
 sudo yunohost app setting radicale skipped_uris -v "$path"
